[package]
name = "slabbable"
version = "0.1.0"
edition = "2021"
description = "Slabbable data structure trait"
homepage = "https://github.com/yaws-rs/edifice"
keywords = ["http", "uri", "builder", "parser"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/edifice"
categories = ["science"]
exclude = ["assets/"]

[features]
default = ["std"]
alloc = []
std = []

[dependencies]

[dev-dependencies]
rstest = { version = "0.19" }

[package.metadata.docs.rs]
features = ["std"]
