[package]
name = "slabbable-hash"
version = "0.1.0"
edition = "2021"
description = "Slabbable hash impl"
homepage = "https://github.com/yaws-rs/edifice"
keywords = ["yaws"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/edifice"
categories = ["science"]
exclude = ["assets/"]

[features]
default = ["std"]
alloc = []
std = []

[dependencies]
slabbable = { version = "0.1", path = "../../slabbable" }

[target.'cfg(not(slabbable_hasher = "_somethingelse"))'.dependencies]
nohash-hasher = { version = "0.2" }

[target.'cfg(not(slabbable_hashmap = "std"))'.dependencies]
hashbrown = { version = "0.15" }

[dev-dependencies]

[package.metadata.docs.rs]
features = ["std"]
