[package]
name = "slabbable-nohash-hasher"
version = "0.1.0"
edition = "2021"
description = "Slabbable nohash-hasher impl"
homepage = "https://github.com/yaws-rs/edifice"
keywords = ["yaws"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/edifice"
categories = ["science"]
exclude = ["assets/"]

[features]
default = ["std"]
alloc = []
std = []

[dependencies]
slabbable = { version = "0.1", path = "../../slabbable" }
nohash-hasher = { version = "0.2" }
hashbrown = { version = "0.15" }

[dev-dependencies]

[package.metadata.docs.rs]
features = ["std"]
