[package]
name = "slabbable-stablevec"
version = "0.1.0"
edition = "2021"
description = "Slabbable stablevec impl"
homepage = "https://github.com/yaws-rs/edifice"
keywords = ["yaws"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/yaws-rs/edifice"
categories = ["science"]
exclude = ["assets/"]

[features]
default = ["std"]
alloc = []
std = []

[dependencies]
slabbable = { version = "0.1", path = "../../slabbable" }
stable-vec = { version = "0.4" }

[dev-dependencies]

[package.metadata.docs.rs]
features = ["std"]
